Update README to reflect new Gradle build commands, clarify manual testing instructions, and add JavaFX launch options for improved user guidance.